--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -1,28 +1,20 @@
 body {
-  background-color: rgb(234, 234, 234) !important;
+  background-color: #f8f8f8 !important;
 }
 
 .ui.inverted.top.fixed.menu {
-  background-image: linear-gradient(
-    135deg,
-    rgb(24, 42, 115) 0%,
-    rgb(33, 138, 174) 69%,
-    rgb(32, 167, 172) 89%
-  ) !important;
+  background-color: #314152 !important;
+ 
 }
 
 /*home page styles*/
 
 .masthead {
-  display: flex;
+  display:grid ;
   align-items: center;
-  background-image: linear-gradient(
-    135deg,
-    rgb(24, 42, 115) 0%,
-    rgb(33, 138, 174) 69%,
-    rgb(32, 167, 172) 89%
-  ) !important;
+  background-color: #314152 !important;
   height: 100vh;
+  
 }
 
 .masthead .ui.menu .ui.button,
@@ -50,6 +42,12 @@ body {
 .ui.cards>.card>.extra a:not(.ui) {
   color: black;
 }
+
+.ui.segment,
+.ui.primary.segment {
+    background: #ffffff;
+}
+
 
 
 /*end home page styles*/
